// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.Search should support custom Button 1`] = `
<span
  class="alu-input-search alu-input-search-enter-button alu-input-affix-wrapper"
>
  <input
    class="alu-input"
    type="text"
    value=""
  />
  <span
    class="alu-input-suffix"
  >
    <button
      class="alu-btn alu-input-search-button"
      type="button"
    >
      <span>
        ok
      </span>
    </button>
  </span>
</span>
`;

exports[`Input.Search should support custom button 1`] = `
<span
  class="alu-input-search alu-input-search-enter-button alu-input-affix-wrapper"
>
  <input
    class="alu-input"
    type="text"
    value=""
  />
  <span
    class="alu-input-suffix"
  >
    <button
      type="button"
    >
      ok
    </button>
  </span>
</span>
`;
